# KoalaLang

./: .gitignore  CMakeLists.txt  README.md  TODO  docs.md
src/: __NATIVE_FUNCTIONS  __c_functions.c  __c_functions.h  ast.h  callgrind.out.142921  data.csv  functions.c  functions.h  hashmap.c  hashmap.h  interpreter.c  interpreter.h  klc  klc_math.c  klc_math.h  klc_trig.c  klc_trig.h  lexer.c  lexer.h  main.c  memory.c  memory.h  modules.c  modules.h  parser.c  parser.h  prova.kl  variables.c  variables.h  vgcore.142921
